Revised command line interface Windows + Linux. (#18)

--- a/demos/SecretSantaExplained.ipynb
+++ b/demos/SecretSantaExplained.ipynb
@@ -11,7 +11,7 @@
     "Mathematically, the Secret Santa problem is about generating so-called [derangements](https://en.wikipedia.org/wiki/Derangement), which are permutations without fixed points. A permutation is a one-to-one mapping on a set of numbers, and a fixed-point is a number that is mapped to itself. \n",
     "\n",
     "We present an MPyC program (a Python program using the `mpyc` package) for generating uniformly random derangements. \n",
-    "In this notebook, the MPyC program is run by a single party only. However, this very same MPyC program can be run between multiple parties to generate secret-shared random derangements. These random derangements will remain secret *forever* unless a majority of these parties collude.\n",
+    "In this notebook, the MPyC program is run by a single party only. However, this very same MPyC program can be run between multiple parties to generate secret-shared random derangements, as will be shown at the end. These random derangements will remain secret *forever* unless a majority of these parties collude.\n",
     "\n",
     "## MPyC setup\n",
     "\n",
@@ -21,7 +21,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from mpyc.runtime import mpc"
@@ -47,7 +49,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "secint = mpc.SecInt() # 32-bit secure MPyC integers"
@@ -63,13 +67,15 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-11-12 09:51:19,049 Start MPyC runtime v0.4.3\n"
+      "2019-03-08 14:57:05,017 Start MPyC runtime v0.4.14\n"
      ]
     }
    ],
@@ -98,7 +104,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -149,7 +157,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "@mpc.coroutine                                    # turn coroutine into an MPyC coroutine\n",
@@ -200,7 +210,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def random_permutation(n):                     # returns list of n secint elements\n",
@@ -240,8 +252,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "@mpc.coroutine                                      # turn coroutine into an MPyC coroutine\n",
@@ -282,8 +296,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "N = 7"
@@ -291,8 +307,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -300,12 +318,12 @@
      "text": [
       "Random unit vectors:\n",
       " 1 [1]\n",
-      " 2 [1, 0]\n",
-      " 3 [1, 0, 0]\n",
-      " 4 [0, 0, 0, 1]\n",
-      " 5 [1, 0, 0, 0, 0]\n",
-      " 6 [0, 0, 0, 0, 0, 1]\n",
-      " 7 [0, 0, 0, 1, 0, 0, 0]\n"
+      " 2 [0, 1]\n",
+      " 3 [0, 1, 0]\n",
+      " 4 [0, 1, 0, 0]\n",
+      " 5 [0, 0, 0, 0, 1]\n",
+      " 6 [0, 0, 0, 0, 1, 0]\n",
+      " 7 [0, 0, 0, 0, 0, 0, 1]\n"
      ]
     }
    ],
@@ -318,8 +336,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -328,11 +348,11 @@
       "Random permutations:\n",
       " 1 [0]\n",
       " 2 [1, 0]\n",
-      " 3 [2, 0, 1]\n",
-      " 4 [1, 3, 2, 0]\n",
-      " 5 [2, 3, 1, 0, 4]\n",
-      " 6 [2, 0, 5, 1, 4, 3]\n",
-      " 7 [5, 4, 6, 1, 3, 2, 0]\n"
+      " 3 [0, 2, 1]\n",
+      " 4 [2, 0, 1, 3]\n",
+      " 5 [0, 4, 1, 2, 3]\n",
+      " 6 [5, 3, 1, 0, 2, 4]\n",
+      " 7 [2, 0, 6, 3, 5, 4, 1]\n"
      ]
     }
    ],
@@ -345,8 +365,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -355,10 +377,10 @@
       "Random derangements:\n",
       " 2 [1, 0]\n",
       " 3 [1, 2, 0]\n",
-      " 4 [3, 2, 1, 0]\n",
-      " 5 [4, 2, 0, 1, 3]\n",
-      " 6 [2, 4, 1, 5, 3, 0]\n",
-      " 7 [2, 6, 0, 5, 1, 3, 4]\n"
+      " 4 [1, 2, 3, 0]\n",
+      " 5 [4, 3, 0, 2, 1]\n",
+      " 6 [5, 2, 0, 4, 3, 1]\n",
+      " 7 [5, 6, 3, 4, 2, 1, 0]\n"
      ]
     }
    ],
@@ -371,19 +393,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-11-12 09:53:04,882 Stop MPyC runtime -- elapsed time: 0:01:45.817151\n"
+      "2019-03-08 14:57:15,207 Stop MPyC runtime -- elapsed time: 0:00:10.190438\n"
      ]
     }
    ],
    "source": [
     "mpc.run(mpc.shutdown())   # required only when run with multiple parties  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys; sys.exit()    # stop execution here when this notebook is run as a Python script, see below"
    ]
   },
   {
@@ -396,7 +429,59 @@
     "\n",
     "We have done so and the resulting file [SecretSantaExplained.py](SecretSantaExplained.py) is stored in the same directory as the present notebook. Now we can run the Python script, as shown below. \n",
     "\n",
-    "First we show a run with one party only. However, this time the code runs outside the Jupyter notebook, using its own Python interpreter. "
+    "First we show a run with one party only. However, this time the code runs outside the Jupyter notebook, using its own Python interpreter. Once the run is completed, the screen output is displayed in the output area below the cell:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-03-08 14:57:24,323 Start MPyC runtime v0.4.14\n",
+      "Example: (5+13)*(5-13) = -144\n",
+      "Random unit vectors:\n",
+      " 1 [1]\n",
+      " 2 [0, 1]\n",
+      " 3 [0, 0, 1]\n",
+      " 4 [0, 0, 0, 1]\n",
+      " 5 [0, 1, 0, 0, 0]\n",
+      " 6 [1, 0, 0, 0, 0, 0]\n",
+      " 7 [0, 0, 0, 0, 1, 0, 0]\n",
+      "Random permutations:\n",
+      " 1 [0]\n",
+      " 2 [0, 1]\n",
+      " 3 [1, 0, 2]\n",
+      " 4 [2, 1, 3, 0]\n",
+      " 5 [1, 3, 4, 2, 0]\n",
+      " 6 [1, 2, 4, 0, 5, 3]\n",
+      " 7 [3, 6, 5, 0, 1, 2, 4]\n",
+      "Random derangements:\n",
+      " 2 [1, 0]\n",
+      " 3 [1, 2, 0]\n",
+      " 4 [2, 3, 0, 1]\n",
+      " 5 [2, 0, 1, 4, 3]\n",
+      " 6 [3, 0, 5, 1, 2, 4]\n",
+      " 7 [3, 2, 4, 0, 6, 1, 5]\n",
+      "2019-03-08 14:57:24,354 Stop MPyC runtime -- elapsed time: 0:00:00.031241\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python SecretSantaExplained.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Any MPyC program comes with several built-in command line options. So, let's take a look at the help message for [SecretSantaExplained.py](SecretSantaExplained.py)."
    ]
   },
   {
@@ -408,185 +493,150 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "usage: SecretSantaExplained.py [-H] [-h] [-C ini] [-P addr] [-M m] [-I i]\n",
+      "                               [-T t] [-B b] [--ssl] [-L l] [-K k] [--no-log]\n",
+      "                               [--no-async] [--no-barrier] [--output-windows]\n",
+      "                               [--output-file] [-f F]\n",
       "\n",
-      "C:\\Users\\bschoe\\Documents\\GitHub\\mympyc\\demos>python run.py 1 SecretSantaExplained.py \n",
-      "2018-11-12 09:53:07,978 Start MPyC runtime v0.4.3\n",
-      "Example: (5+13)*(5-13) = -144\n",
-      "Random unit vectors:\n",
-      " 1 [1]\n",
-      " 2 [0, 1]\n",
-      " 3 [0, 1, 0]\n",
-      " 4 [1, 0, 0, 0]\n",
-      " 5 [1, 0, 0, 0, 0]\n",
-      " 6 [0, 1, 0, 0, 0, 0]\n",
-      " 7 [1, 0, 0, 0, 0, 0, 0]\n",
-      "Random permutations:\n",
-      " 1 [0]\n",
-      " 2 [1, 0]\n",
-      " 3 [1, 2, 0]\n",
-      " 4 [3, 1, 2, 0]\n",
-      " 5 [1, 0, 3, 4, 2]\n",
-      " 6 [0, 1, 2, 4, 5, 3]\n",
-      " 7 [1, 3, 2, 5, 0, 4, 6]\n",
-      "Random derangements:\n",
-      " 2 [1, 0]\n",
-      " 3 [2, 0, 1]\n",
-      " 4 [1, 0, 3, 2]\n",
-      " 5 [1, 0, 3, 4, 2]\n",
-      " 6 [1, 5, 3, 2, 0, 4]\n",
-      " 7 [6, 5, 3, 2, 0, 4, 1]\n",
-      "2018-11-12 09:53:08,166 Stop MPyC runtime -- elapsed time: 0:00:00.187507\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"SecretSantaExplained.py\", line 247, in <module>\n",
-      "    get_ipython().system('run 1 SecretSantaExplained.py')\n",
-      "NameError: name 'get_ipython' is not defined\n"
+      "optional arguments:\n",
+      "  -H, --HELP            show this help message for MPyC and exit\n",
+      "  -h, --help            show SecretSantaExplained.py help message (if any)\n",
+      "\n",
+      "MPyC configuration:\n",
+      "  -C ini, --config ini  use ini file, defining all m parties\n",
+      "  -P addr               use addr=host:port per party (repeat m times)\n",
+      "  -M m                  use m local parties (and run all m, if i is not set)\n",
+      "  -I i, --index i       set index of this local party to i, 0<=i<m\n",
+      "  -T t, --threshold t   threshold t, 0<=t<m/2\n",
+      "  -B b, --base-port b   use port number b+i for party i\n",
+      "  --ssl                 enable SSL connections\n",
+      "\n",
+      "MPyC parameters:\n",
+      "  -L l, --bit-length l  default bit length l for secure numbers\n",
+      "  -K k, --sec-param k   security parameter k, leakage probability 2**-k\n",
+      "  --no-log              disable logging messages\n",
+      "  --no-async            disable asynchronous evaluation\n",
+      "  --no-barrier          disable barriers\n",
+      "\n",
+      "MPyC misc:\n",
+      "  --output-windows      screen output for parties i>0 (only on Windows)\n",
+      "  --output-file         append output for parties i>0 to party{m}_{i}.log\n",
+      "  -f F                  consume IPython's -f argument F\n"
      ]
     }
    ],
    "source": [
-    "!run 1 SecretSantaExplained.py"
+    "!python SecretSantaExplained.py -H"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The error can be safely ignored.\n",
-    "\n",
-    "Next, for the \"real thing\", we show a run with three parties, in which three processes are launched communicating via local tcp-connections."
+    "Now for the \"real thing\". Let's do a run with three parties, in which three processes will be launched communicating via local tcp-connections. Let's set a few options as well. We enable SSL for the occasion, and we enforce that tcp port numbers will be used starting from 11443 (arbitrary choice). We also set the default bit length to $l=10$, which is large enough for our examples anyway. The default length of $l=10$ is now used because we use secure integers of type `mpc.SecInt()`; for secure integers of type `mpc.SecInt(32)`, say, changing $l$ has no effect."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "C:\\Users\\bschoe\\Documents\\GitHub\\mympyc\\demos>python run.py 3 SecretSantaExplained.py \n",
-      "2018-11-12 09:53:14,815 Start MPyC runtime v0.4.3\n",
-      "2018-11-12 09:53:14,815 Connected to all parties.\n",
-      "Example: (5+13)*(5-13) = -144\n",
-      "Random unit vectors:\n",
-      " 1 [1]\n",
-      " 2 [1, 0]\n",
-      " 3 [0, 0, 1]\n",
-      " 4 [0, 1, 0, 0]\n",
-      " 5 [0, 0, 1, 0, 0]\n",
-      " 6 [0, 0, 0, 0, 0, 1]\n",
-      " 7 [0, 0, 0, 0, 0, 0, 1]\n",
-      "Random permutations:\n",
-      " 1 [0]\n",
-      " 2 [0, 1]\n",
-      " 3 [1, 0, 2]\n",
-      " 4 [3, 1, 0, 2]\n",
-      " 5 [0, 3, 1, 4, 2]\n",
-      " 6 [4, 3, 0, 2, 5, 1]\n",
-      " 7 [6, 3, 0, 5, 2, 1, 4]\n",
-      "Random derangements:\n",
-      " 2 [1, 0]\n",
-      " 3 [1, 2, 0]\n",
-      " 4 [2, 0, 3, 1]\n",
-      " 5 [2, 3, 0, 4, 1]\n",
-      " 6 [2, 4, 3, 5, 0, 1]\n",
-      " 7 [3, 0, 5, 1, 2, 6, 4]\n",
-      "2018-11-12 09:53:15,691 Stop MPyC runtime -- elapsed time: 0:00:00.875021\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"SecretSantaExplained.py\", line 247, in <module>\n",
-      "    get_ipython().system('run 1 SecretSantaExplained.py')\n",
-      "NameError: name 'get_ipython' is not defined\n"
-     ]
-    }
-   ],
-   "source": [
-    "!run 3 SecretSantaExplained.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As a final test, we show a run with five parties."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "C:\\Users\\bschoe\\Documents\\GitHub\\mympyc\\demos>python run.py 5 SecretSantaExplained.py \n",
-      "2018-11-12 09:54:43,544 Start MPyC runtime v0.4.3\n",
-      "2018-11-12 09:54:44,075 Connected to all parties.\n",
+      "2019-03-08 14:57:38,982 Start MPyC runtime v0.4.14\n",
+      "2019-03-08 14:57:39,045 All 3 parties connected via SSL.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
-      " 2 [1, 0]\n",
+      " 2 [0, 1]\n",
       " 3 [0, 1, 0]\n",
-      " 4 [1, 0, 0, 0]\n",
+      " 4 [0, 0, 1, 0]\n",
       " 5 [0, 0, 0, 1, 0]\n",
-      " 6 [0, 0, 0, 0, 0, 1]\n",
-      " 7 [0, 0, 0, 0, 0, 0, 1]\n",
+      " 6 [0, 1, 0, 0, 0, 0]\n",
+      " 7 [0, 0, 0, 0, 0, 1, 0]\n",
       "Random permutations:\n",
       " 1 [0]\n",
       " 2 [1, 0]\n",
-      " 3 [1, 0, 2]\n",
-      " 4 [0, 2, 3, 1]\n",
-      " 5 [2, 4, 0, 1, 3]\n",
-      " 6 [3, 5, 0, 1, 4, 2]\n",
-      " 7 [1, 0, 4, 2, 3, 5, 6]\n",
+      " 3 [2, 0, 1]\n",
+      " 4 [3, 2, 1, 0]\n",
+      " 5 [1, 2, 3, 4, 0]\n",
+      " 6 [1, 3, 5, 2, 4, 0]\n",
+      " 7 [4, 5, 2, 6, 0, 1, 3]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
       " 3 [1, 2, 0]\n",
       " 4 [1, 0, 3, 2]\n",
-      " 5 [1, 4, 3, 0, 2]\n",
-      " 6 [3, 0, 5, 1, 2, 4]\n",
-      " 7 [1, 3, 4, 6, 0, 2, 5]\n",
-      "2018-11-12 09:54:44,513 Stop MPyC runtime -- elapsed time: 0:00:00.953145\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"SecretSantaExplained.py\", line 247, in <module>\n",
-      "    get_ipython().system('run 1 SecretSantaExplained.py')\n",
-      "NameError: name 'get_ipython' is not defined\n"
+      " 5 [3, 0, 4, 1, 2]\n",
+      " 6 [3, 5, 1, 2, 0, 4]\n",
+      " 7 [5, 3, 4, 2, 6, 1, 0]\n",
+      "2019-03-08 14:57:39,310 Stop MPyC runtime -- elapsed time: 0:00:00.328048\n"
      ]
     }
    ],
    "source": [
-    "!run 5 SecretSantaExplained.py"
+    "!python SecretSantaExplained.py -M3 --ssl -B 11443 -L10"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If desired, the code can also be run with two or four parties. The included test setup supports up to $m=5$ parties, of which at most $t$ can be corrupt, with $0\\leq t\\leq \\lfloor (m-1)/2 \\rfloor$.\n",
-    "\n",
+    "The code can be run with any number of parties $m=1,2,3,4,5,6,7,...$ of which no more than $t$ are assumed to be corrupt, with $0\\leq t\\leq \\lfloor (m-1)/2 \\rfloor$. As a final example, we show a run with $m=8$ parties, with the treshold set to $t=2$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-03-08 14:57:41,841 Start MPyC runtime v0.4.14\n",
+      "2019-03-08 14:57:41,856 All 8 parties connected.\n",
+      "Example: (5+13)*(5-13) = -144\n",
+      "Random unit vectors:\n",
+      " 1 [1]\n",
+      " 2 [0, 1]\n",
+      " 3 [1, 0, 0]\n",
+      " 4 [0, 0, 1, 0]\n",
+      " 5 [0, 0, 1, 0, 0]\n",
+      " 6 [0, 0, 0, 0, 0, 1]\n",
+      " 7 [0, 0, 0, 0, 0, 1, 0]\n",
+      "Random permutations:\n",
+      " 1 [0]\n",
+      " 2 [1, 0]\n",
+      " 3 [0, 2, 1]\n",
+      " 4 [3, 1, 2, 0]\n",
+      " 5 [2, 0, 3, 4, 1]\n",
+      " 6 [3, 1, 5, 2, 4, 0]\n",
+      " 7 [5, 4, 6, 2, 3, 1, 0]\n",
+      "Random derangements:\n",
+      " 2 [1, 0]\n",
+      " 3 [1, 2, 0]\n",
+      " 4 [2, 0, 3, 1]\n",
+      " 5 [1, 2, 4, 0, 3]\n",
+      " 6 [4, 2, 5, 0, 1, 3]\n",
+      " 7 [6, 4, 5, 1, 0, 3, 2]\n",
+      "2019-03-08 14:57:42,622 Stop MPyC runtime -- elapsed time: 0:00:00.781067\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python SecretSantaExplained.py -M8 -T2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This concludes the explanation of our MPyC protocol for the Secret Santa problem. The Python script [secretsanta.py](secretsanta.py) contains a slightly more extensive demo, showing how secure fixed-point arithmetic or secure finite fields can be used instead of secure integers."
    ]
   }
@@ -607,7 +657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
