--- a/demos/4demos.ipynb
+++ b/demos/4demos.ipynb
@@ -34,40 +34,40 @@
      "output_type": "stream",
      "text": [
       "Setting input to default = 8\n",
-      "2018-10-26 08:55:48,392 Start MPyC runtime v0.4.2\n",
+      "2019-03-10 18:17:56,995 Start MPyC runtime v0.4.14\n",
       "Using secure integers: <class 'mpyc.sectypes.SecInt32'>\n",
       "2 [1, 0]\n",
       "3 [2, 0, 1]\n",
-      "4 [2, 3, 1, 0]\n",
-      "5 [1, 2, 4, 0, 3]\n",
+      "4 [1, 3, 0, 2]\n",
+      "5 [1, 4, 3, 0, 2]\n",
       "6 [1, 5, 3, 4, 0, 2]\n",
-      "7 [4, 2, 1, 6, 0, 3, 5]\n",
-      "8 [1, 0, 7, 5, 2, 6, 4, 3]\n",
+      "7 [3, 0, 5, 1, 6, 2, 4]\n",
+      "8 [7, 3, 1, 0, 6, 2, 5, 4]\n",
       "Using secure fixed-point numbers: <class 'mpyc.sectypes.SecFxp32:16'>\n",
       "2 [1.0, 0.0]\n",
-      "3 [2.0, 0.0, 1.0]\n",
-      "4 [3.0, 2.0, 1.0, 0.0]\n",
-      "5 [3.0, 4.0, 0.0, 1.0, 2.0]\n",
-      "6 [1.0, 2.0, 3.0, 0.0, 5.0, 4.0]\n",
-      "7 [1.0, 2.0, 6.0, 4.0, 0.0, 3.0, 5.0]\n",
-      "8 [5.0, 7.0, 4.0, 0.0, 1.0, 3.0, 2.0, 6.0]\n",
-      "Using secure prime fields: <class 'mpyc.sectypes.SecFld3(11)'>\n",
+      "3 [1.0, 2.0, 0.0]\n",
+      "4 [3.0, 2.0, 0.0, 1.0]\n",
+      "5 [1.0, 4.0, 3.0, 2.0, 0.0]\n",
+      "6 [5.0, 4.0, 3.0, 1.0, 2.0, 0.0]\n",
+      "7 [1.0, 6.0, 5.0, 4.0, 3.0, 2.0, 0.0]\n",
+      "8 [3.0, 5.0, 4.0, 2.0, 0.0, 1.0, 7.0, 6.0]\n",
+      "Using secure prime fields: <class 'mpyc.sectypes.SecFld3(<class 'mpyc.pfield.GF(11)'>)'>\n",
       "2 [1, 0]\n",
       "3 [2, 0, 1]\n",
-      "4 [1, 2, 3, 0]\n",
-      "5 [1, 3, 4, 2, 0]\n",
-      "6 [3, 2, 5, 4, 1, 0]\n",
-      "7 [3, 4, 5, 2, 1, 6, 0]\n",
-      "8 [2, 6, 5, 7, 3, 0, 4, 1]\n",
-      "Using secure binary fields: <class 'mpyc.sectypes.SecFld3(x^3+x+1)'>\n",
+      "4 [3, 2, 0, 1]\n",
+      "5 [4, 2, 1, 0, 3]\n",
+      "6 [3, 0, 1, 5, 2, 4]\n",
+      "7 [1, 5, 0, 2, 6, 4, 3]\n",
+      "8 [7, 4, 6, 1, 3, 0, 2, 5]\n",
+      "Using secure binary fields: <class 'mpyc.sectypes.SecFld3(<class 'mpyc.bfield.GF(2^3)'>)'>\n",
       "2 [1, 0]\n",
       "3 [1, x, 0]\n",
-      "4 [x+1, x, 1, 0]\n",
-      "5 [x, 0, x+1, x^2, 1]\n",
-      "6 [x, x^2, x^2+1, 0, 1, x+1]\n",
-      "7 [x+1, x^2+x, 0, x^2, x^2+1, 1, x]\n",
-      "8 [x^2+1, x+1, x^2+x, x^2+x+1, 0, 1, x, x^2]\n",
-      "2018-10-26 08:55:48,778 Stop MPyC runtime -- elapsed time: 0:00:00.386759\n"
+      "4 [1, x, x+1, 0]\n",
+      "5 [x^2, x, x+1, 0, 1]\n",
+      "6 [x^2+1, x, 1, 0, x+1, x^2]\n",
+      "7 [x^2, x^2+x, x+1, x^2+1, x, 0, 1]\n",
+      "8 [x^2+x, x, x^2+1, x^2, 1, x^2+x+1, x+1, 0]\n",
+      "2019-03-10 18:17:57,176 Stop MPyC runtime -- elapsed time: 0:00:00.181470\n"
      ]
     }
    ],
@@ -84,19 +84,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-10-26 08:56:05,951 Start MPyC runtime v0.4.2\n",
-      "2018-10-26 08:56:05,984 Attribute node Outlook\n",
-      "2018-10-26 08:56:06,007 Attribute node Humidity\n",
-      "2018-10-26 08:56:06,007 Leaf node label 0\n",
-      "2018-10-26 08:56:06,021 Leaf node label 1\n",
-      "2018-10-26 08:56:06,029 Leaf node label 1\n",
-      "2018-10-26 08:56:06,038 Attribute node Wind\n",
-      "2018-10-26 08:56:06,038 Leaf node label 0\n",
-      "2018-10-26 08:56:06,051 Leaf node label 1\n",
+      "2019-03-10 18:17:58,615 Start MPyC runtime v0.4.14\n",
+      "2019-03-10 18:17:58,631 Attribute node Outlook\n",
+      "2019-03-10 18:17:58,631 Attribute node Humidity\n",
+      "2019-03-10 18:17:58,646 Leaf node label 0\n",
+      "2019-03-10 18:17:58,646 Leaf node label 1\n",
+      "2019-03-10 18:17:58,646 Leaf node label 1\n",
+      "2019-03-10 18:17:58,662 Attribute node Wind\n",
+      "2019-03-10 18:17:58,675 Leaf node label 0\n",
+      "2019-03-10 18:17:58,687 Leaf node label 1\n",
       "Tree = ('Outlook', [('Humidity', [0, 1]), 1, ('Wind', [0, 1])])\n",
       "Tree height = 2\n",
       "Tree size = 8\n",
-      "2018-10-26 08:56:06,055 Stop MPyC runtime -- elapsed time: 0:00:00.103438\n"
+      "2019-03-10 18:17:58,687 Stop MPyC runtime -- elapsed time: 0:00:00.071992\n"
      ]
     }
    ],
@@ -113,21 +113,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-10-26 08:56:15,922 Setting certificate file to default = c0.cert\n",
-      "2018-10-26 08:56:15,937 Start MPyC runtime v0.4.2\n",
-      "2018-10-26 08:56:15,937 0 Termination?...\n",
-      "2018-10-26 08:56:15,959 1 Determining pivot...\n",
-      "2018-10-26 08:56:15,965 1 Updating tableau...\n",
-      "2018-10-26 08:56:15,965 1 Termination?...\n",
-      "2018-10-26 08:56:15,969 2 Determining pivot...\n",
-      "2018-10-26 08:56:15,974 2 Updating tableau...\n",
-      "2018-10-26 08:56:15,979 2 Termination?...\n",
-      "2018-10-26 08:56:15,985 Termination...\n",
+      "2019-03-10 18:17:59,781 Setting certificate file to default = c0.cert\n",
+      "2019-03-10 18:17:59,796 Start MPyC runtime v0.4.14\n",
+      "2019-03-10 18:17:59,796 0 Termination?...\n",
+      "2019-03-10 18:17:59,796 1 Determining pivot...\n",
+      "2019-03-10 18:17:59,796 1 Updating tableau...\n",
+      "2019-03-10 18:17:59,796 1 Termination?...\n",
+      "2019-03-10 18:17:59,796 2 Determining pivot...\n",
+      "2019-03-10 18:17:59,812 2 Updating tableau...\n",
+      "2019-03-10 18:17:59,812 2 Termination?...\n",
+      "2019-03-10 18:17:59,812 Termination...\n",
       " max(f) = 21 / 2 = 10.500000\n",
-      "2018-10-26 08:56:15,987 Computing solution...\n",
-      "2018-10-26 08:56:15,991 Computing dual solution...\n",
-      "2018-10-26 08:56:15,995 Stop MPyC runtime -- elapsed time: 0:00:00.057737\n",
-      "2018-10-26 08:56:15,995 Writing output to c0.cert.\n"
+      "2019-03-10 18:17:59,822 Computing solution...\n",
+      "2019-03-10 18:17:59,822 Computing dual solution...\n",
+      "2019-03-10 18:17:59,826 Stop MPyC runtime -- elapsed time: 0:00:00.029791\n",
+      "2019-03-10 18:17:59,826 Writing output to c0.cert.\n"
      ]
     }
    ],
@@ -144,66 +144,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-10-26 08:56:19,637 Start MPyC runtime v0.4.2\n",
-      "2018-10-26 08:56:19,637 --------------- INPUT   -------------\n",
-      "Type = SecInt37, range = (7994, 7995)\n",
-      "Labels: [2]\n",
+      "2019-03-10 18:18:00,622 Start MPyC runtime v0.4.14\n",
+      "2019-03-10 18:18:00,622 --------------- INPUT   -------------\n",
+      "Type = SecInt37, range = (8045, 8046)\n",
+      "Labels: [1]\n",
       "[[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 1 1 0 0 0 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0]\n",
-      " [0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0]\n",
-      " [0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 1 1 1 1 0 0 0 0]\n",
-      " [0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 1 1 1 0 0 0 0]\n",
-      " [0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]]\n",
-      "2018-10-26 08:56:19,737 --------------- LAYER 1 -------------\n",
-      "2018-10-26 08:56:19,751 - - - - - - - - conv2d  - - - - - - -\n",
-      "2018-10-26 08:56:20,201 Barrier 0 1 [2605]\n",
-      "2018-10-26 08:56:20,201 - - - - - - - - maxpool - - - - - - -\n",
-      "2018-10-26 08:56:32,660 Barrier 0 1 [77869]\n",
-      "2018-10-26 08:56:32,660 - - - - - - - - ReLU    - - - - - - -\n",
-      "2018-10-26 08:56:36,627 Barrier 0 1 [102961]\n",
-      "2018-10-26 08:56:36,627 --------------- LAYER 2 -------------\n",
-      "2018-10-26 08:56:36,735 - - - - - - - - conv2d  - - - - - - -\n",
-      "2018-10-26 08:56:37,821 Barrier 1 1 [102961]\n",
-      "2018-10-26 08:56:38,880 Barrier 1 1 [102961]\n",
-      "2018-10-26 08:56:39,909 Barrier 1 1 [102961]\n",
-      "2018-10-26 08:56:40,951 Barrier 1 1 [102961]\n",
-      "2018-10-26 08:56:41,132 Barrier 0 1 [102961]\n",
-      "2018-10-26 08:56:41,132 - - - - - - - - maxpool - - - - - - -\n",
-      "2018-10-26 08:56:48,444 Barrier 0 1 [140593]\n",
-      "2018-10-26 08:56:48,444 - - - - - - - - ReLU    - - - - - - -\n",
-      "2018-10-26 08:56:50,855 Barrier 0 1 [153141]\n",
-      "2018-10-26 08:56:50,855 --------------- LAYER 3 -------------\n",
-      "2018-10-26 08:56:56,175 - - - - - - - - fc      - - - - - - -\n",
-      "2018-10-26 08:56:58,985 - - - - - - - - ReLU    - - - - - - -\n",
-      "2018-10-26 08:56:59,868 Barrier 0 1 [157241]\n",
-      "2018-10-26 08:56:59,868 --------------- LAYER 4 -------------\n",
-      "2018-10-26 08:57:00,115 - - - - - - - - fc      - - - - - - -\n",
-      "2018-10-26 08:57:00,115 --------------- OUTPUT  -------------\n",
-      "2 2\n",
-      "[-5011091389, -10310681004, 25155170155, 5825791963, -6840773928, -10590407143, -11654878451, 1251266250, -2776242278, -8995964426]\n",
-      "2018-10-26 08:57:00,137 Stop MPyC runtime -- elapsed time: 0:00:40.500610\n"
+      "2019-03-10 18:18:00,706 --------------- LAYER 1 -------------\n",
+      "2019-03-10 18:18:00,727 - - - - - - - - conv2d  - - - - - - -\n",
+      "2019-03-10 18:18:01,193 Barrier 0 1 [1284]\n",
+      "2019-03-10 18:18:01,193 - - - - - - - - maxpool - - - - - - -\n",
+      "2019-03-10 18:18:13,098 Barrier 0 1 [76548]\n",
+      "2019-03-10 18:18:13,098 - - - - - - - - ReLU    - - - - - - -\n",
+      "2019-03-10 18:18:17,107 Barrier 0 1 [101640]\n",
+      "2019-03-10 18:18:17,107 --------------- LAYER 2 -------------\n",
+      "2019-03-10 18:18:17,217 - - - - - - - - conv2d  - - - - - - -\n",
+      "2019-03-10 18:18:18,651 Barrier 1 1 [101640]\n",
+      "2019-03-10 18:18:20,019 Barrier 1 1 [101640]\n",
+      "2019-03-10 18:18:21,467 Barrier 1 1 [101640]\n",
+      "2019-03-10 18:18:22,748 Barrier 1 1 [101640]\n",
+      "2019-03-10 18:18:22,960 Barrier 0 1 [101640]\n",
+      "2019-03-10 18:18:22,960 - - - - - - - - maxpool - - - - - - -\n",
+      "2019-03-10 18:18:29,856 Barrier 0 1 [139272]\n",
+      "2019-03-10 18:18:29,856 - - - - - - - - ReLU    - - - - - - -\n",
+      "2019-03-10 18:18:31,989 Barrier 0 1 [151820]\n",
+      "2019-03-10 18:18:31,989 --------------- LAYER 3 -------------\n",
+      "2019-03-10 18:18:37,297 - - - - - - - - fc      - - - - - - -\n",
+      "2019-03-10 18:18:40,551 - - - - - - - - ReLU    - - - - - - -\n",
+      "2019-03-10 18:18:41,441 Barrier 0 1 [155920]\n",
+      "2019-03-10 18:18:41,441 --------------- LAYER 4 -------------\n",
+      "2019-03-10 18:18:41,688 - - - - - - - - fc      - - - - - - -\n",
+      "2019-03-10 18:18:41,688 --------------- OUTPUT  -------------\n",
+      "Image #8045 with label 1: 1 predicted. \n",
+      "[55217408, 17558830774, 1472174722, -7011381488, -658629080, -11395165160, -9050154147, -341296198, -354294689, -7398494184]\n",
+      "2019-03-10 18:18:41,701 Stop MPyC runtime -- elapsed time: 0:00:41.078917\n"
      ]
     }
    ],
@@ -222,7 +222,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -231,28 +231,28 @@
      "text": [
       "Using secure integers: <class 'mpyc.sectypes.SecInt32'>\n",
       "2 [1, 0]\n",
-      "3 [1, 2, 0]\n",
+      "3 [2, 0, 1]\n",
       "4 [2, 3, 1, 0]\n",
-      "5 [1, 2, 3, 4, 0]\n",
-      "6 [2, 3, 4, 0, 5, 1]\n",
+      "5 [2, 4, 1, 0, 3]\n",
+      "6 [3, 5, 1, 4, 2, 0]\n",
       "Using secure fixed-point numbers: <class 'mpyc.sectypes.SecFxp32:16'>\n",
       "2 [1.0, 0.0]\n",
       "3 [2.0, 0.0, 1.0]\n",
-      "4 [3.0, 2.0, 0.0, 1.0]\n",
-      "5 [1.0, 0.0, 4.0, 2.0, 3.0]\n",
-      "6 [3.0, 2.0, 0.0, 1.0, 5.0, 4.0]\n",
-      "Using secure prime fields: <class 'mpyc.sectypes.SecFld3(11)'>\n",
+      "4 [1.0, 3.0, 0.0, 2.0]\n",
+      "5 [2.0, 3.0, 4.0, 0.0, 1.0]\n",
+      "6 [5.0, 4.0, 0.0, 2.0, 3.0, 1.0]\n",
+      "Using secure prime fields: <class 'mpyc.sectypes.SecFld3(<class 'mpyc.pfield.GF(11)'>)'>\n",
       "2 [1, 0]\n",
-      "3 [2, 0, 1]\n",
-      "4 [1, 2, 3, 0]\n",
-      "5 [1, 2, 4, 0, 3]\n",
-      "6 [5, 0, 3, 4, 1, 2]\n",
-      "Using secure binary fields: <class 'mpyc.sectypes.SecFld3(x^3+x+1)'>\n",
+      "3 [1, 2, 0]\n",
+      "4 [3, 0, 1, 2]\n",
+      "5 [4, 3, 0, 1, 2]\n",
+      "6 [5, 2, 4, 0, 3, 1]\n",
+      "Using secure binary fields: <class 'mpyc.sectypes.SecFld3(<class 'mpyc.bfield.GF(2^3)'>)'>\n",
       "2 [1, 0]\n",
-      "3 [1, x, 0]\n",
-      "4 [1, x, x+1, 0]\n",
-      "5 [x^2, x, 1, 0, x+1]\n",
-      "6 [x^2, x+1, x^2+1, 0, x, 1]\n",
+      "3 [x, 0, 1]\n",
+      "4 [1, 0, x+1, x]\n",
+      "5 [x, 0, x^2, 1, x+1]\n",
+      "6 [x, x+1, 1, 0, x^2+1, x^2]\n",
       "\n",
       "Tree = ('A4', [('A2', [2, 2, 2, 2, 2]), ('A2', [1, 2, 2, 2, 2]), ('A2', [1, 1, 2, 2, 2]), ('A3', [2, 1, 1, 1, 1]), ('A3', [2, 1, 1, 1, 1])])\n",
       "Tree height = 2\n",
@@ -260,7 +260,7 @@
       "\n",
       " max(f) = 1705860 / 495720 = 3.441176\n",
       "\n",
-      "Type = SecFxp10:4, range = (6682, 6683)\n",
+      "Type = SecFxp10:4, range = (1327, 1328)\n",
       "Labels: [9]\n",
       "[[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
@@ -269,29 +269,29 @@
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 0 1 1 1 1 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 0 0 0 1 1 1 1 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 1 1 1 1 1 0 0 1 1 1 1 1 1 1 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 1 1 1 1 1 1 1 1 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 1 1 1 0 0 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 1 1 0 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 1 1 1 1 1 1 0 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 1 1 1 1 1 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 1 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 1 1 1 1 0 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 1 0 0 0 0 0 0 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 1 0 0 0 0 0 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 0 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 0 0 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 1 1 1 1 1 1 0 0 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]]\n",
-      "9 9.0\n",
-      "[-8.875, -7.625, -7.0625, -0.875, 0.9375, -7.75, -10.625, 0.3125, 1.125, 16.5625]\n"
+      "Image #1327 with label 9: 9 predicted. \n",
+      "[-6.875, -6.0, -4.6875, -0.5625, 3.875, -4.875, -9.125, -0.5625, -0.125, 12.125]\n"
      ]
     }
    ],
@@ -337,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
