Update run-all demos batch files.

--- a/demos/SecretSantaExplained.ipynb
+++ b/demos/SecretSantaExplained.ipynb
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-08 14:57:05,017 Start MPyC runtime v0.4.14\n"
+      "2019-10-15 23:41:45,720 Start MPyC runtime v0.5.10\n"
      ]
     }
    ],
@@ -166,7 +166,7 @@
     "async def random_derangement(n):                  # returns list of n secint elements\n",
     "    await mpc.returnType(secint, n)               # set return type of this MPyC coroutine\n",
     "    p = random_permutation(n)\n",
-    "    t = mpc.prod([p[i] - i for i in range(n)])    # securely multiply all differences a[i] - i\n",
+    "    t = mpc.prod([p[i] - i for i in range(n)])    # securely multiply all differences p[i] - i\n",
     "    if await mpc.is_zero_public(t):               # publicly test whether t is equal to zero\n",
     "        return random_derangement(n)              # recurse if t is zero\n",
     "    else:\n",
@@ -318,12 +318,12 @@
      "text": [
       "Random unit vectors:\n",
       " 1 [1]\n",
-      " 2 [0, 1]\n",
+      " 2 [1, 0]\n",
       " 3 [0, 1, 0]\n",
-      " 4 [0, 1, 0, 0]\n",
-      " 5 [0, 0, 0, 0, 1]\n",
-      " 6 [0, 0, 0, 0, 1, 0]\n",
-      " 7 [0, 0, 0, 0, 0, 0, 1]\n"
+      " 4 [0, 0, 0, 1]\n",
+      " 5 [0, 0, 1, 0, 0]\n",
+      " 6 [0, 0, 0, 1, 0, 0]\n",
+      " 7 [0, 0, 0, 1, 0, 0, 0]\n"
      ]
     }
    ],
@@ -347,12 +347,12 @@
      "text": [
       "Random permutations:\n",
       " 1 [0]\n",
-      " 2 [1, 0]\n",
-      " 3 [0, 2, 1]\n",
-      " 4 [2, 0, 1, 3]\n",
-      " 5 [0, 4, 1, 2, 3]\n",
-      " 6 [5, 3, 1, 0, 2, 4]\n",
-      " 7 [2, 0, 6, 3, 5, 4, 1]\n"
+      " 2 [0, 1]\n",
+      " 3 [2, 1, 0]\n",
+      " 4 [1, 2, 0, 3]\n",
+      " 5 [1, 0, 4, 3, 2]\n",
+      " 6 [0, 1, 3, 4, 5, 2]\n",
+      " 7 [2, 5, 0, 3, 4, 1, 6]\n"
      ]
     }
    ],
@@ -376,11 +376,11 @@
      "text": [
       "Random derangements:\n",
       " 2 [1, 0]\n",
-      " 3 [1, 2, 0]\n",
-      " 4 [1, 2, 3, 0]\n",
-      " 5 [4, 3, 0, 2, 1]\n",
-      " 6 [5, 2, 0, 4, 3, 1]\n",
-      " 7 [5, 6, 3, 4, 2, 1, 0]\n"
+      " 3 [2, 0, 1]\n",
+      " 4 [2, 3, 0, 1]\n",
+      " 5 [4, 3, 1, 0, 2]\n",
+      " 6 [5, 0, 1, 4, 3, 2]\n",
+      " 7 [1, 6, 3, 4, 0, 2, 5]\n"
      ]
     }
    ],
@@ -402,7 +402,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-08 14:57:15,207 Stop MPyC runtime -- elapsed time: 0:00:10.190438\n"
+      "2019-10-15 23:42:08,901 Stop MPyC runtime -- elapsed time: 0:00:23.181213\n"
      ]
     }
    ],
@@ -444,32 +444,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-08 14:57:24,323 Start MPyC runtime v0.4.14\n",
+      "2019-10-15 23:42:11,843 Start MPyC runtime v0.5.10\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
-      " 2 [0, 1]\n",
-      " 3 [0, 0, 1]\n",
-      " 4 [0, 0, 0, 1]\n",
+      " 2 [1, 0]\n",
+      " 3 [0, 1, 0]\n",
+      " 4 [0, 0, 1, 0]\n",
       " 5 [0, 1, 0, 0, 0]\n",
-      " 6 [1, 0, 0, 0, 0, 0]\n",
+      " 6 [0, 0, 0, 1, 0, 0]\n",
       " 7 [0, 0, 0, 0, 1, 0, 0]\n",
       "Random permutations:\n",
       " 1 [0]\n",
-      " 2 [0, 1]\n",
-      " 3 [1, 0, 2]\n",
-      " 4 [2, 1, 3, 0]\n",
-      " 5 [1, 3, 4, 2, 0]\n",
-      " 6 [1, 2, 4, 0, 5, 3]\n",
-      " 7 [3, 6, 5, 0, 1, 2, 4]\n",
+      " 2 [1, 0]\n",
+      " 3 [2, 0, 1]\n",
+      " 4 [1, 2, 0, 3]\n",
+      " 5 [3, 0, 2, 1, 4]\n",
+      " 6 [4, 1, 2, 0, 5, 3]\n",
+      " 7 [0, 2, 4, 6, 1, 5, 3]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
       " 3 [1, 2, 0]\n",
-      " 4 [2, 3, 0, 1]\n",
-      " 5 [2, 0, 1, 4, 3]\n",
-      " 6 [3, 0, 5, 1, 2, 4]\n",
-      " 7 [3, 2, 4, 0, 6, 1, 5]\n",
-      "2019-03-08 14:57:24,354 Stop MPyC runtime -- elapsed time: 0:00:00.031241\n"
+      " 4 [1, 0, 3, 2]\n",
+      " 5 [4, 0, 1, 2, 3]\n",
+      " 6 [2, 3, 5, 4, 0, 1]\n",
+      " 7 [6, 3, 4, 5, 1, 2, 0]\n",
+      "2019-10-15 23:42:11,905 Stop MPyC runtime -- elapsed time: 0:00:00.062492\n"
      ]
     }
    ],
@@ -547,33 +547,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-08 14:57:38,982 Start MPyC runtime v0.4.14\n",
-      "2019-03-08 14:57:39,045 All 3 parties connected via SSL.\n",
+      "2019-10-15 23:42:17,714 Start MPyC runtime v0.5.10\n",
+      "2019-10-15 23:42:18,277 All 3 parties connected via SSL.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
       " 2 [0, 1]\n",
-      " 3 [0, 1, 0]\n",
-      " 4 [0, 0, 1, 0]\n",
-      " 5 [0, 0, 0, 1, 0]\n",
-      " 6 [0, 1, 0, 0, 0, 0]\n",
+      " 3 [1, 0, 0]\n",
+      " 4 [1, 0, 0, 0]\n",
+      " 5 [0, 0, 1, 0, 0]\n",
+      " 6 [1, 0, 0, 0, 0, 0]\n",
       " 7 [0, 0, 0, 0, 0, 1, 0]\n",
       "Random permutations:\n",
       " 1 [0]\n",
       " 2 [1, 0]\n",
-      " 3 [2, 0, 1]\n",
-      " 4 [3, 2, 1, 0]\n",
-      " 5 [1, 2, 3, 4, 0]\n",
-      " 6 [1, 3, 5, 2, 4, 0]\n",
-      " 7 [4, 5, 2, 6, 0, 1, 3]\n",
+      " 3 [2, 1, 0]\n",
+      " 4 [3, 0, 1, 2]\n",
+      " 5 [2, 4, 3, 0, 1]\n",
+      " 6 [1, 2, 3, 5, 0, 4]\n",
+      " 7 [3, 4, 5, 6, 0, 2, 1]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
-      " 3 [1, 2, 0]\n",
-      " 4 [1, 0, 3, 2]\n",
-      " 5 [3, 0, 4, 1, 2]\n",
-      " 6 [3, 5, 1, 2, 0, 4]\n",
-      " 7 [5, 3, 4, 2, 6, 1, 0]\n",
-      "2019-03-08 14:57:39,310 Stop MPyC runtime -- elapsed time: 0:00:00.328048\n"
+      " 3 [2, 0, 1]\n",
+      " 4 [1, 3, 0, 2]\n",
+      " 5 [3, 2, 4, 1, 0]\n",
+      " 6 [5, 3, 0, 1, 2, 4]\n",
+      " 7 [6, 3, 1, 5, 2, 0, 4]\n",
+      "2019-10-15 23:42:18,558 Stop MPyC runtime -- elapsed time: 0:00:00.843674\n"
      ]
     }
    ],
@@ -599,33 +599,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-08 14:57:41,841 Start MPyC runtime v0.4.14\n",
-      "2019-03-08 14:57:41,856 All 8 parties connected.\n",
+      "2019-10-15 23:42:22,658 Start MPyC runtime v0.5.10\n",
+      "2019-10-15 23:42:23,205 All 8 parties connected.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
-      " 2 [0, 1]\n",
-      " 3 [1, 0, 0]\n",
-      " 4 [0, 0, 1, 0]\n",
-      " 5 [0, 0, 1, 0, 0]\n",
-      " 6 [0, 0, 0, 0, 0, 1]\n",
-      " 7 [0, 0, 0, 0, 0, 1, 0]\n",
+      " 2 [1, 0]\n",
+      " 3 [0, 1, 0]\n",
+      " 4 [0, 1, 0, 0]\n",
+      " 5 [1, 0, 0, 0, 0]\n",
+      " 6 [0, 0, 1, 0, 0, 0]\n",
+      " 7 [0, 0, 0, 1, 0, 0, 0]\n",
       "Random permutations:\n",
       " 1 [0]\n",
       " 2 [1, 0]\n",
-      " 3 [0, 2, 1]\n",
-      " 4 [3, 1, 2, 0]\n",
-      " 5 [2, 0, 3, 4, 1]\n",
-      " 6 [3, 1, 5, 2, 4, 0]\n",
-      " 7 [5, 4, 6, 2, 3, 1, 0]\n",
+      " 3 [1, 0, 2]\n",
+      " 4 [2, 1, 0, 3]\n",
+      " 5 [1, 0, 4, 3, 2]\n",
+      " 6 [5, 3, 2, 0, 4, 1]\n",
+      " 7 [2, 4, 0, 6, 3, 1, 5]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
       " 3 [1, 2, 0]\n",
-      " 4 [2, 0, 3, 1]\n",
-      " 5 [1, 2, 4, 0, 3]\n",
-      " 6 [4, 2, 5, 0, 1, 3]\n",
-      " 7 [6, 4, 5, 1, 0, 3, 2]\n",
-      "2019-03-08 14:57:42,622 Stop MPyC runtime -- elapsed time: 0:00:00.781067\n"
+      " 4 [3, 0, 1, 2]\n",
+      " 5 [2, 0, 3, 4, 1]\n",
+      " 6 [5, 2, 4, 1, 0, 3]\n",
+      " 7 [5, 2, 6, 4, 0, 3, 1]\n",
+      "2019-10-15 23:42:23,721 Stop MPyC runtime -- elapsed time: 0:00:01.062537\n"
      ]
     }
    ],
@@ -657,7 +657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
