Fix isue with Python 3.8.
To avoid 'SyntaxError: asynchronous comprehension outside of an asynchronous function' replace top-level await by mpc.run().

--- a/demos/KaplanMeierSurvivalExplained.ipynb
+++ b/demos/KaplanMeierSurvivalExplained.ipynb
@@ -871,7 +871,7 @@
     "stride = 16\n",
     "agg_d1, agg_n1 = aggregate(d1, n1, stride)\n",
     "agg_d2, agg_n2 = aggregate(d2, n2, stride)\n",
-    "agg_d1, agg_n1, agg_d2, agg_n2 = [list(map(int, await mpc.output(_))) for _ in (agg_d1, agg_n1, agg_d2, agg_n2)]\n",
+    "agg_d1, agg_n1, agg_d2, agg_n2 = [list(map(int, mpc.run(mpc.output(_)))) for _ in (agg_d1, agg_n1, agg_d2, agg_n2)]\n",
     "T1_, E1_ = events_from_table(agg_d1, agg_n1)\n",
     "T2_, E2_ = events_from_table(agg_d2, agg_n2)\n",
     "T1_, T2_ = [t * stride for t in T1_], [t * stride for t in T2_]\n",
