Bypass create_task() plus minor things.

--- a/demos/SecretSantaExplained.ipynb
+++ b/demos/SecretSantaExplained.ipynb
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-10-15 23:41:45,720 Start MPyC runtime v0.5.10\n"
+      "2020-05-18 18:07:57,157 Start MPyC runtime v0.6.1\n"
      ]
     }
    ],
@@ -218,9 +218,9 @@
     "def random_permutation(n):                     # returns list of n secint elements\n",
     "    p = [secint(i) for i in range(n)]          # initialize p to identity permutation\n",
     "    for i in range(n-1):\n",
-    "        x_r = random_unit_vector(n-i)          # x_r = [0]*(r-i) + [1] + [0]*(n-r), i <= r < n\n",
+    "        x_r = random_unit_vector(n-i)          # x_r = [0]*(r-i) + [1] + [0]*(n-1-r), i <= r < n\n",
     "        p_r = mpc.in_prod(p[i:], x_r)          # p_r = p[r]\n",
-    "        d_r = mpc.scalar_mul(p[i] - p_r, x_r)  # d_r = [0]*(r-i) + [p[i] - p[r]] + [0]*(n-r)\n",
+    "        d_r = mpc.scalar_mul(p[i] - p_r, x_r)  # d_r = [0]*(r-i) + [p[i] - p[r]] + [0]*(n-1-r)\n",
     "        p[i] = p_r                             # p[i] = p[r]\n",
     "        for j in range(n-i):\n",
     "            p[i+j] += d_r[j]                   # p[r] = p[r} + p[i] - p[r] = p[i]\n",
@@ -319,11 +319,11 @@
       "Random unit vectors:\n",
       " 1 [1]\n",
       " 2 [1, 0]\n",
-      " 3 [0, 1, 0]\n",
-      " 4 [0, 0, 0, 1]\n",
-      " 5 [0, 0, 1, 0, 0]\n",
-      " 6 [0, 0, 0, 1, 0, 0]\n",
-      " 7 [0, 0, 0, 1, 0, 0, 0]\n"
+      " 3 [1, 0, 0]\n",
+      " 4 [0, 0, 1, 0]\n",
+      " 5 [0, 0, 0, 1, 0]\n",
+      " 6 [0, 1, 0, 0, 0, 0]\n",
+      " 7 [0, 0, 0, 0, 0, 1, 0]\n"
      ]
     }
    ],
@@ -348,11 +348,11 @@
       "Random permutations:\n",
       " 1 [0]\n",
       " 2 [0, 1]\n",
-      " 3 [2, 1, 0]\n",
-      " 4 [1, 2, 0, 3]\n",
-      " 5 [1, 0, 4, 3, 2]\n",
-      " 6 [0, 1, 3, 4, 5, 2]\n",
-      " 7 [2, 5, 0, 3, 4, 1, 6]\n"
+      " 3 [2, 0, 1]\n",
+      " 4 [3, 1, 0, 2]\n",
+      " 5 [4, 1, 3, 2, 0]\n",
+      " 6 [0, 1, 4, 2, 3, 5]\n",
+      " 7 [5, 3, 2, 1, 4, 0, 6]\n"
      ]
     }
    ],
@@ -376,11 +376,11 @@
      "text": [
       "Random derangements:\n",
       " 2 [1, 0]\n",
-      " 3 [2, 0, 1]\n",
-      " 4 [2, 3, 0, 1]\n",
-      " 5 [4, 3, 1, 0, 2]\n",
-      " 6 [5, 0, 1, 4, 3, 2]\n",
-      " 7 [1, 6, 3, 4, 0, 2, 5]\n"
+      " 3 [1, 2, 0]\n",
+      " 4 [1, 0, 3, 2]\n",
+      " 5 [2, 3, 4, 0, 1]\n",
+      " 6 [1, 3, 4, 5, 2, 0]\n",
+      " 7 [6, 3, 4, 2, 5, 0, 1]\n"
      ]
     }
    ],
@@ -402,7 +402,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-10-15 23:42:08,901 Stop MPyC runtime -- elapsed time: 0:00:23.181213\n"
+      "2020-05-18 18:08:04,144 Stop MPyC runtime -- elapsed time: 0:00:06.986576\n"
      ]
     }
    ],
@@ -444,32 +444,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-10-15 23:42:11,843 Start MPyC runtime v0.5.10\n",
+      "2020-05-18 18:08:09,636 Start MPyC runtime v0.6.1\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
-      " 2 [1, 0]\n",
+      " 2 [0, 1]\n",
       " 3 [0, 1, 0]\n",
       " 4 [0, 0, 1, 0]\n",
-      " 5 [0, 1, 0, 0, 0]\n",
-      " 6 [0, 0, 0, 1, 0, 0]\n",
-      " 7 [0, 0, 0, 0, 1, 0, 0]\n",
+      " 5 [0, 0, 0, 1, 0]\n",
+      " 6 [1, 0, 0, 0, 0, 0]\n",
+      " 7 [0, 0, 1, 0, 0, 0, 0]\n",
       "Random permutations:\n",
       " 1 [0]\n",
-      " 2 [1, 0]\n",
+      " 2 [0, 1]\n",
       " 3 [2, 0, 1]\n",
-      " 4 [1, 2, 0, 3]\n",
-      " 5 [3, 0, 2, 1, 4]\n",
-      " 6 [4, 1, 2, 0, 5, 3]\n",
-      " 7 [0, 2, 4, 6, 1, 5, 3]\n",
+      " 4 [1, 0, 2, 3]\n",
+      " 5 [0, 2, 4, 3, 1]\n",
+      " 6 [1, 4, 2, 3, 0, 5]\n",
+      " 7 [1, 2, 0, 4, 3, 6, 5]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
       " 3 [1, 2, 0]\n",
-      " 4 [1, 0, 3, 2]\n",
+      " 4 [3, 2, 1, 0]\n",
       " 5 [4, 0, 1, 2, 3]\n",
-      " 6 [2, 3, 5, 4, 0, 1]\n",
-      " 7 [6, 3, 4, 5, 1, 2, 0]\n",
-      "2019-10-15 23:42:11,905 Stop MPyC runtime -- elapsed time: 0:00:00.062492\n"
+      " 6 [4, 0, 5, 1, 2, 3]\n",
+      " 7 [4, 3, 6, 0, 5, 1, 2]\n",
+      "2020-05-18 18:08:09,667 Stop MPyC runtime -- elapsed time: 0:00:00.031247\n"
      ]
     }
    ],
@@ -495,8 +495,8 @@
      "text": [
       "usage: SecretSantaExplained.py [-H] [-h] [-C ini] [-P addr] [-M m] [-I i]\n",
       "                               [-T t] [-B b] [--ssl] [-L l] [-K k] [--no-log]\n",
-      "                               [--no-async] [--no-barrier] [--output-windows]\n",
-      "                               [--output-file] [-f F]\n",
+      "                               [--no-async] [--no-barrier] [--no-gmpy2]\n",
+      "                               [--output-windows] [--output-file] [-f F]\n",
       "\n",
       "optional arguments:\n",
       "  -H, --HELP            show this help message for MPyC and exit\n",
@@ -517,6 +517,7 @@
       "  --no-log              disable logging messages\n",
       "  --no-async            disable asynchronous evaluation\n",
       "  --no-barrier          disable barriers\n",
+      "  --no-gmpy2            disable use of gmpy2 package\n",
       "\n",
       "MPyC misc:\n",
       "  --output-windows      screen output for parties i>0 (only on Windows)\n",
@@ -547,33 +548,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-10-15 23:42:17,714 Start MPyC runtime v0.5.10\n",
-      "2019-10-15 23:42:18,277 All 3 parties connected via SSL.\n",
+      "2020-05-18 18:08:14,235 Start MPyC runtime v0.6.1\n",
+      "2020-05-18 18:08:14,860 All 3 parties connected via SSL.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
       " 2 [0, 1]\n",
-      " 3 [1, 0, 0]\n",
+      " 3 [0, 1, 0]\n",
       " 4 [1, 0, 0, 0]\n",
       " 5 [0, 0, 1, 0, 0]\n",
-      " 6 [1, 0, 0, 0, 0, 0]\n",
-      " 7 [0, 0, 0, 0, 0, 1, 0]\n",
+      " 6 [0, 1, 0, 0, 0, 0]\n",
+      " 7 [0, 1, 0, 0, 0, 0, 0]\n",
       "Random permutations:\n",
       " 1 [0]\n",
       " 2 [1, 0]\n",
-      " 3 [2, 1, 0]\n",
-      " 4 [3, 0, 1, 2]\n",
-      " 5 [2, 4, 3, 0, 1]\n",
-      " 6 [1, 2, 3, 5, 0, 4]\n",
-      " 7 [3, 4, 5, 6, 0, 2, 1]\n",
+      " 3 [1, 2, 0]\n",
+      " 4 [2, 1, 0, 3]\n",
+      " 5 [3, 0, 2, 4, 1]\n",
+      " 6 [4, 2, 3, 0, 5, 1]\n",
+      " 7 [1, 6, 3, 0, 5, 4, 2]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
-      " 3 [2, 0, 1]\n",
-      " 4 [1, 3, 0, 2]\n",
-      " 5 [3, 2, 4, 1, 0]\n",
-      " 6 [5, 3, 0, 1, 2, 4]\n",
-      " 7 [6, 3, 1, 5, 2, 0, 4]\n",
-      "2019-10-15 23:42:18,558 Stop MPyC runtime -- elapsed time: 0:00:00.843674\n"
+      " 3 [1, 2, 0]\n",
+      " 4 [3, 2, 1, 0]\n",
+      " 5 [4, 3, 0, 2, 1]\n",
+      " 6 [2, 0, 1, 5, 3, 4]\n",
+      " 7 [1, 3, 6, 5, 0, 4, 2]\n",
+      "2020-05-18 18:08:15,141 Stop MPyC runtime -- elapsed time: 0:00:00.906189\n"
      ]
     }
    ],
@@ -599,33 +600,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-10-15 23:42:22,658 Start MPyC runtime v0.5.10\n",
-      "2019-10-15 23:42:23,205 All 8 parties connected.\n",
+      "2020-05-18 18:08:18,091 Start MPyC runtime v0.6.1\n",
+      "2020-05-18 18:08:18,638 All 8 parties connected.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
-      " 2 [1, 0]\n",
+      " 2 [0, 1]\n",
       " 3 [0, 1, 0]\n",
-      " 4 [0, 1, 0, 0]\n",
-      " 5 [1, 0, 0, 0, 0]\n",
-      " 6 [0, 0, 1, 0, 0, 0]\n",
-      " 7 [0, 0, 0, 1, 0, 0, 0]\n",
+      " 4 [0, 0, 1, 0]\n",
+      " 5 [0, 0, 1, 0, 0]\n",
+      " 6 [0, 0, 0, 0, 0, 1]\n",
+      " 7 [0, 1, 0, 0, 0, 0, 0]\n",
       "Random permutations:\n",
       " 1 [0]\n",
       " 2 [1, 0]\n",
-      " 3 [1, 0, 2]\n",
-      " 4 [2, 1, 0, 3]\n",
-      " 5 [1, 0, 4, 3, 2]\n",
-      " 6 [5, 3, 2, 0, 4, 1]\n",
-      " 7 [2, 4, 0, 6, 3, 1, 5]\n",
+      " 3 [0, 2, 1]\n",
+      " 4 [1, 0, 2, 3]\n",
+      " 5 [3, 1, 4, 2, 0]\n",
+      " 6 [3, 4, 1, 5, 0, 2]\n",
+      " 7 [4, 5, 3, 6, 0, 2, 1]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
       " 3 [1, 2, 0]\n",
-      " 4 [3, 0, 1, 2]\n",
-      " 5 [2, 0, 3, 4, 1]\n",
-      " 6 [5, 2, 4, 1, 0, 3]\n",
-      " 7 [5, 2, 6, 4, 0, 3, 1]\n",
-      "2019-10-15 23:42:23,721 Stop MPyC runtime -- elapsed time: 0:00:01.062537\n"
+      " 4 [2, 0, 3, 1]\n",
+      " 5 [4, 2, 1, 0, 3]\n",
+      " 6 [4, 3, 5, 1, 0, 2]\n",
+      " 7 [5, 6, 3, 4, 1, 0, 2]\n",
+      "2020-05-18 18:08:19,310 Stop MPyC runtime -- elapsed time: 0:00:01.218667\n"
      ]
     }
    ],
@@ -657,7 +658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
