--- a/demos/SecretSantaExplained.ipynb
+++ b/demos/SecretSantaExplained.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Secret Santa explained\n",
     "\n",
-    "Step by step, we develop a secure MPC protocol for the [Secret Santa](https://en.wikipedia.org/wiki/Secret_Santa) problem. Traditionally, a group of family and friends gathers to put all their names in a hat and then randomly draw names from the hat. If someone draws their own name, they have to start all over again. \n",
+    "Step by step, we develop an MPC protocol for the [Secret Santa](https://en.wikipedia.org/wiki/Secret_Santa) problem. Traditionally, a group of family and friends gathers to put all their names in a hat and then randomly draw names from the hat. If someone draws their own name, they have to start all over again. \n",
     "\n",
     "Mathematically, the Secret Santa problem is about generating so-called [derangements](https://en.wikipedia.org/wiki/Derangement), which are permutations without fixed points. A permutation is a one-to-one mapping on a set of numbers, and a fixed-point is a number that is mapped to itself. \n",
     "\n",
@@ -37,11 +37,11 @@
     "\n",
     "Represented as Python lists, the 12 smallest derangements are:\n",
     "\n",
-    "|$n$| <p align=\"justify\">length-$n$ derangements|\n",
-    "|---|:----------------------|\n",
-    "| 2 | <p align=\"left\">[1,0]  |\n",
-    "| 3 | <p align=\"left\">[1,2,0], [2,0,1]  |\n",
-    "| 4 | <p align=\"left\">[1,0,3,2], [1,2,3,0], [1,3,0,2], [2,0,3,1], [2,3,0,1], [2,3,1,0], [3,0,1,2], [3,2,0,1], [3,2,1,0]  |\n",
+    "| n | length-n derangements|\n",
+    "|---| :----------------------|\n",
+    "| 2 | [1,0]  |\n",
+    "| 3 | [1,2,0], [2,0,1]  |\n",
+    "| 4 | [1,0,3,2], [1,2,3,0], [1,3,0,2], [2,0,3,1], [2,3,0,1], [2,3,1,0], [3,0,1,2], [3,2,0,1], [3,2,1,0]  |\n",
     "\n",
     "To represent *secret-shared* derangements, we will use a secure MPyC type of integers. For simplicity, we choose 32-bit (default) secure integers."
    ]
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-05-18 18:07:57,157 Start MPyC runtime v0.6.1\n"
+      "2021-06-11 15:06:47,266 Start MPyC runtime v0.7.6\n"
      ]
     }
    ],
@@ -319,11 +319,11 @@
       "Random unit vectors:\n",
       " 1 [1]\n",
       " 2 [1, 0]\n",
-      " 3 [1, 0, 0]\n",
-      " 4 [0, 0, 1, 0]\n",
-      " 5 [0, 0, 0, 1, 0]\n",
-      " 6 [0, 1, 0, 0, 0, 0]\n",
-      " 7 [0, 0, 0, 0, 0, 1, 0]\n"
+      " 3 [0, 1, 0]\n",
+      " 4 [1, 0, 0, 0]\n",
+      " 5 [0, 1, 0, 0, 0]\n",
+      " 6 [1, 0, 0, 0, 0, 0]\n",
+      " 7 [0, 1, 0, 0, 0, 0, 0]\n"
      ]
     }
    ],
@@ -347,12 +347,12 @@
      "text": [
       "Random permutations:\n",
       " 1 [0]\n",
-      " 2 [0, 1]\n",
+      " 2 [1, 0]\n",
       " 3 [2, 0, 1]\n",
-      " 4 [3, 1, 0, 2]\n",
-      " 5 [4, 1, 3, 2, 0]\n",
-      " 6 [0, 1, 4, 2, 3, 5]\n",
-      " 7 [5, 3, 2, 1, 4, 0, 6]\n"
+      " 4 [2, 1, 3, 0]\n",
+      " 5 [1, 3, 4, 0, 2]\n",
+      " 6 [1, 0, 4, 2, 5, 3]\n",
+      " 7 [0, 1, 5, 6, 2, 3, 4]\n"
      ]
     }
    ],
@@ -376,11 +376,11 @@
      "text": [
       "Random derangements:\n",
       " 2 [1, 0]\n",
-      " 3 [1, 2, 0]\n",
+      " 3 [2, 0, 1]\n",
       " 4 [1, 0, 3, 2]\n",
-      " 5 [2, 3, 4, 0, 1]\n",
-      " 6 [1, 3, 4, 5, 2, 0]\n",
-      " 7 [6, 3, 4, 2, 5, 0, 1]\n"
+      " 5 [1, 2, 0, 4, 3]\n",
+      " 6 [1, 4, 5, 2, 0, 3]\n",
+      " 7 [1, 3, 0, 4, 2, 6, 5]\n"
      ]
     }
    ],
@@ -402,7 +402,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-05-18 18:08:04,144 Stop MPyC runtime -- elapsed time: 0:00:06.986576\n"
+      "2021-06-11 15:07:02,233 Stop MPyC runtime -- elapsed time: 0:00:14.965030\n"
      ]
     }
    ],
@@ -412,9 +412,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\berry\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3449: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
     "import sys; sys.exit()    # stop execution here when this notebook is run as a Python script, see below"
    ]
@@ -435,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -444,32 +462,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-05-18 18:08:09,636 Start MPyC runtime v0.6.1\n",
+      "2021-06-11 15:07:31,085 Start MPyC runtime v0.7.6\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
-      " 2 [0, 1]\n",
-      " 3 [0, 1, 0]\n",
-      " 4 [0, 0, 1, 0]\n",
-      " 5 [0, 0, 0, 1, 0]\n",
+      " 2 [1, 0]\n",
+      " 3 [0, 0, 1]\n",
+      " 4 [0, 0, 0, 1]\n",
+      " 5 [0, 0, 1, 0, 0]\n",
       " 6 [1, 0, 0, 0, 0, 0]\n",
-      " 7 [0, 0, 1, 0, 0, 0, 0]\n",
+      " 7 [0, 0, 0, 0, 1, 0, 0]\n",
       "Random permutations:\n",
       " 1 [0]\n",
       " 2 [0, 1]\n",
-      " 3 [2, 0, 1]\n",
-      " 4 [1, 0, 2, 3]\n",
-      " 5 [0, 2, 4, 3, 1]\n",
-      " 6 [1, 4, 2, 3, 0, 5]\n",
-      " 7 [1, 2, 0, 4, 3, 6, 5]\n",
+      " 3 [1, 2, 0]\n",
+      " 4 [1, 3, 0, 2]\n",
+      " 5 [1, 4, 2, 0, 3]\n",
+      " 6 [1, 4, 3, 5, 2, 0]\n",
+      " 7 [6, 2, 3, 4, 5, 1, 0]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
-      " 3 [1, 2, 0]\n",
-      " 4 [3, 2, 1, 0]\n",
-      " 5 [4, 0, 1, 2, 3]\n",
-      " 6 [4, 0, 5, 1, 2, 3]\n",
-      " 7 [4, 3, 6, 0, 5, 1, 2]\n",
-      "2020-05-18 18:08:09,667 Stop MPyC runtime -- elapsed time: 0:00:00.031247\n"
+      " 3 [2, 0, 1]\n",
+      " 4 [3, 2, 0, 1]\n",
+      " 5 [2, 4, 0, 1, 3]\n",
+      " 6 [3, 4, 5, 0, 2, 1]\n",
+      " 7 [5, 0, 3, 2, 6, 1, 4]\n",
+      "2021-06-11 15:07:31,116 Stop MPyC runtime -- elapsed time: 0:00:00.031247\n"
      ]
     }
    ],
@@ -486,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +514,8 @@
       "usage: SecretSantaExplained.py [-H] [-h] [-C ini] [-P addr] [-M m] [-I i]\n",
       "                               [-T t] [-B b] [--ssl] [-L l] [-K k] [--no-log]\n",
       "                               [--no-async] [--no-barrier] [--no-gmpy2]\n",
-      "                               [--output-windows] [--output-file] [-f F]\n",
+      "                               [--mix32-64bit] [--output-windows]\n",
+      "                               [--output-file] [-f F]\n",
       "\n",
       "optional arguments:\n",
       "  -H, --HELP            show this help message for MPyC and exit\n",
@@ -518,6 +537,7 @@
       "  --no-async            disable asynchronous evaluation\n",
       "  --no-barrier          disable barriers\n",
       "  --no-gmpy2            disable use of gmpy2 package\n",
+      "  --mix32-64bit         enable mix of 32-bit and 64-bit platforms\n",
       "\n",
       "MPyC misc:\n",
       "  --output-windows      screen output for parties i>0 (only on Windows)\n",
@@ -539,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -548,33 +568,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-05-18 18:08:14,235 Start MPyC runtime v0.6.1\n",
-      "2020-05-18 18:08:14,860 All 3 parties connected via SSL.\n",
+      "2021-06-11 15:07:35,684 Start MPyC runtime v0.7.6\n",
+      "2021-06-11 15:07:36,285 All 3 parties connected via SSL.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
-      " 2 [0, 1]\n",
+      " 2 [1, 0]\n",
       " 3 [0, 1, 0]\n",
       " 4 [1, 0, 0, 0]\n",
-      " 5 [0, 0, 1, 0, 0]\n",
-      " 6 [0, 1, 0, 0, 0, 0]\n",
-      " 7 [0, 1, 0, 0, 0, 0, 0]\n",
+      " 5 [0, 0, 0, 0, 1]\n",
+      " 6 [0, 0, 0, 0, 0, 1]\n",
+      " 7 [0, 0, 0, 1, 0, 0, 0]\n",
       "Random permutations:\n",
       " 1 [0]\n",
       " 2 [1, 0]\n",
-      " 3 [1, 2, 0]\n",
-      " 4 [2, 1, 0, 3]\n",
-      " 5 [3, 0, 2, 4, 1]\n",
-      " 6 [4, 2, 3, 0, 5, 1]\n",
-      " 7 [1, 6, 3, 0, 5, 4, 2]\n",
+      " 3 [0, 2, 1]\n",
+      " 4 [1, 3, 2, 0]\n",
+      " 5 [1, 2, 3, 4, 0]\n",
+      " 6 [0, 1, 4, 5, 2, 3]\n",
+      " 7 [1, 0, 5, 2, 3, 6, 4]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
       " 3 [1, 2, 0]\n",
-      " 4 [3, 2, 1, 0]\n",
-      " 5 [4, 3, 0, 2, 1]\n",
-      " 6 [2, 0, 1, 5, 3, 4]\n",
-      " 7 [1, 3, 6, 5, 0, 4, 2]\n",
-      "2020-05-18 18:08:15,141 Stop MPyC runtime -- elapsed time: 0:00:00.906189\n"
+      " 4 [2, 3, 1, 0]\n",
+      " 5 [3, 4, 0, 2, 1]\n",
+      " 6 [1, 2, 3, 5, 0, 4]\n",
+      " 7 [1, 6, 5, 4, 0, 2, 3]\n",
+      "2021-06-11 15:07:36,585 Stop MPyC runtime -- elapsed time: 0:00:00.900950\n"
      ]
     }
    ],
@@ -591,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -600,33 +620,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-05-18 18:08:18,091 Start MPyC runtime v0.6.1\n",
-      "2020-05-18 18:08:18,638 All 8 parties connected.\n",
+      "2021-06-11 15:07:39,108 Start MPyC runtime v0.7.6\n",
+      "2021-06-11 15:07:39,655 All 8 parties connected.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
-      " 2 [0, 1]\n",
-      " 3 [0, 1, 0]\n",
-      " 4 [0, 0, 1, 0]\n",
-      " 5 [0, 0, 1, 0, 0]\n",
-      " 6 [0, 0, 0, 0, 0, 1]\n",
-      " 7 [0, 1, 0, 0, 0, 0, 0]\n",
+      " 2 [1, 0]\n",
+      " 3 [1, 0, 0]\n",
+      " 4 [0, 0, 0, 1]\n",
+      " 5 [0, 1, 0, 0, 0]\n",
+      " 6 [1, 0, 0, 0, 0, 0]\n",
+      " 7 [0, 0, 0, 1, 0, 0, 0]\n",
       "Random permutations:\n",
       " 1 [0]\n",
       " 2 [1, 0]\n",
-      " 3 [0, 2, 1]\n",
-      " 4 [1, 0, 2, 3]\n",
-      " 5 [3, 1, 4, 2, 0]\n",
-      " 6 [3, 4, 1, 5, 0, 2]\n",
-      " 7 [4, 5, 3, 6, 0, 2, 1]\n",
+      " 3 [2, 1, 0]\n",
+      " 4 [0, 3, 1, 2]\n",
+      " 5 [4, 3, 1, 0, 2]\n",
+      " 6 [2, 4, 5, 3, 1, 0]\n",
+      " 7 [5, 4, 3, 1, 0, 2, 6]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
       " 3 [1, 2, 0]\n",
-      " 4 [2, 0, 3, 1]\n",
-      " 5 [4, 2, 1, 0, 3]\n",
-      " 6 [4, 3, 5, 1, 0, 2]\n",
-      " 7 [5, 6, 3, 4, 1, 0, 2]\n",
-      "2020-05-18 18:08:19,310 Stop MPyC runtime -- elapsed time: 0:00:01.218667\n"
+      " 4 [3, 2, 0, 1]\n",
+      " 5 [2, 3, 0, 4, 1]\n",
+      " 6 [1, 2, 5, 0, 3, 4]\n",
+      " 7 [5, 3, 6, 2, 1, 0, 4]\n",
+      "2021-06-11 15:07:40,308 Stop MPyC runtime -- elapsed time: 0:00:01.200208\n"
      ]
     }
    ],
@@ -638,7 +658,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This concludes the explanation of our MPyC protocol for the Secret Santa problem. The Python script [secretsanta.py](secretsanta.py) contains a slightly more extensive demo, showing how secure fixed-point arithmetic or secure finite fields can be used instead of secure integers."
+    "This concludes the explanation of our MPyC solution for the Secret Santa problem. The Python script [secretsanta.py](secretsanta.py) contains a slightly more extensive demo, showing how secure fixed-point arithmetic or secure finite fields can be used instead of secure integers."
    ]
   }
  ],
@@ -658,7 +678,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
